--- a/packages/ui/assets/css/talismn.css
+++ b/packages/ui/assets/css/talismn.css
@@ -34,6 +34,11 @@ body {
   font-size: 1.6rem !important;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 * {
   box-sizing: border-box;
   color: inherit;
